--- a/.github/workflows/goto-transcoder.yml
+++ b/.github/workflows/goto-transcoder.yml
@@ -34,4 +34,4 @@ jobs:
 
       # Step 3: Run goto-transcoder
       - name: Run goto-transcoder
-        run: ./scripts/run-goto-transcoder.sh
+        run: ./scripts/run-goto-transcoder.sh checked_unchecked.*.out
