--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
-f# This version should be updated whenever we update the version of the Rust
+# This version should be updated whenever we update the version of the Rust
 # standard library we currently track.
 
 [toolchain]
